--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="My resume">
+  <meta name="author" content="862359520">
 
-  <title>John Doe - Business Administration</title>
+  <title>Xinxin Tian - UCR Student</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Xinxin Tian</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/xinxintian.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,12 +58,20 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Xinxin Tian
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">UCR Student📚</div>
+        <p class="lead mb-4">
+        
+        Xinxin is a dedicated and passionate UCR student, currently pursuing a B.S. degree. As a student, Xinxin has excelled in her academic pursuits, consistently demonstrating a strong work ethic and commitment to her studies.
 
-        Enter bio here<br><br>
+Throughout her time at UCR, Xinxin has been an active member of various clubs and organizations, showcasing her ability to balance her academic and extracurricular commitments. She has also participated in numerous research projects and internships, further honing her skills and gaining valuable hands-on experience in her chosen field.
+
+Xinxin's academic achievements and professional experience have laid the foundation for her future career goals. She aspires to become a successful business woman, leveraging her skills and knowledge to make a meaningful impact in her chosen industry.
+
+Outside of her academic and professional pursuits, Xinxin is a passionate dancer, which showcases her well-rounded personality and personal interests. She is committed to continuous growth and learning, both academically and personally, as she strives to become a leader in her field.
+
+In conclusion, Xinxin is an exceptional UCR student with a bright future ahead. Her dedication to her studies, professional experience, and personal growth make her a standout individual, poised to excel in her chosen career path. 
 
         Enter bio here
         </p>
@@ -71,7 +79,7 @@
           <a target="_blank" id="socialicon-1" href="https://linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/Xinxintiandino">
             <i class="fab fa-github"></i>
           </a>
           <a target="_blank" id="socialicon-3" href="https://twitter.com">
@@ -92,12 +100,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Marketing Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Wobiande</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Developed and executed marketing campaigns<br> 
+              • Improved communication skills<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,11 +114,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">ABC Non-profit Organization</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for corridinating customers<br>
+              • Responsible for organizing team events<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -122,14 +129,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0"> Vice President of the Marketing Club</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
+            • Organized events and workshops to help fellow students develop their marketing skill<br>
+            • Provided guidance and support to first-year students<br>
           </p>
           </div>
           <div class="resume-date text-md-right">
@@ -152,35 +156,34 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor of Science</div>
+            <div>Bachelor of Science</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2022 - December 2024</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
+        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">-->
+        <!--  <div class="resume-content">-->
+        <!--    <h3 class="mb-0">University of California Riverside</h3>-->
+        <!--    <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>-->
+        <!--    <div>Project Management</div>-->
+        <!--  </div>-->
+        <!--    <span class="text-primary">June 2017</span>-->
+        <!--  </div>-->
+        <!--</div>-->
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
+        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">-->
+        <!--  <div class="resume-content">-->
+        <!--    <h3 class="mb-0">University of California Riverside</h3>-->
+        <!--    <div class="subheading mb-3">Business Administration</div>-->
+        <!--    <div>Information Systems</div>-->
+        <!--  </div>-->
+        <!--  <div class="resume-date text-md-right">-->
+        <!--    <span class="text-primary">August 2012 - May 2016</span>-->
+        <!--  </div>-->
+        <!--</div>-->
 
       </div>
     </section>
@@ -191,7 +194,11 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/vol.png" width="500px">
+            <img src="img/vol1.png" width="500px">
+            <img src="img/vol2.jpg" width="500px">
+            <img src="img/vol3.jpg" width="500px">
+            
         </center>
       </div>
     </section>
@@ -199,7 +206,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Xinxin Tian</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
